# mcp-cbr-rates

./: README.md  pyproject.toml  server.json
src/mcp_cbr_rates/: __init__.py  client.py  server.py
tests/: test_inflation.py
